# warehouse

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  python-app.yml
docs/source/: conf.py  index.rst  modules.rst  warehouse.rst  warehouse.settings.rst
inventory/: admin.py  barcodes.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_type.py  0003_grading.py  0004_grading_description.py  0005_stockitem.py  0006_stockitem_age_range.py  0007_auto_20210424_1453.py  0008_rename_grading_quality.py  0009_rename_type_stockitem_category.py  0010_rename_type_category.py  0011_auto_20210425_1745.py  0012_alter_stockitem_barcode.py  0013_auto_20210425_1748.py  0014_remove_stockitem_barcode.py  0015_stockitem_barcode.py  0016_remove_stockitem_barcode.py  0017_rename_stockitem_product.py  0018_product_barcode.py  0019_location.py  0020_department_location.py  0021_auto_20210426_2102.py
inventory/templates/: base.html
inventory/templates/inventory/: product.html  product_results.html  product_search.html
tests/: __init__.py  warehouse.py
warehouse/: asgi.py  settings.py  urls.py  wsgi.py
warehouse/settings/: base.py  dev.py
warehouse/templates/: base.html
warehouse/templates/registration/: login.html
