[tool.poetry]
name = "warehouse"
version = "2020.12.20"
description = "An inventory system for charitable organizations"
authors = ["NMunro"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
reportlab = "^3.5.56"
python-decouple = "^3.4"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
sphinx = "^1.8"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
